--- a/navfeature/style.css
+++ b/navfeature/style.css
@@ -7,9 +7,37 @@
 body {
   display:flex;
   position: fixed;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  flex-direction: column;
   background: cadetblue;
 }
 
 .logo img{
   height: 20vh;
+}
+
+header {
+  justify-content: center;
+  display: flex;
+  flex-direction: row;
+}
+
+ul {
+  display: flex;
+  flex-direction: row;
+}
+
+ul li {
+  list-style-type: none;
+  margin-top: 9vh;
+  margin-left: 12vh;
+}
+
+
+footer {
+  display: block;
+  position:fixed;
+  margin-top: 95vh;
 }
